@@ -1,5 +1,7 @@
 0.40 2018-??-??
 -bugfix: gracefully handle incorrectly encoded query strings with unencoded '=' not following a key
+-bugfix: param and query incorrectly unset single parameters when passed a falsey value
+-documentation: clarify handling of '+' in decode
 
 0.39 2018-07-22
 -behavior: no size limit on member string sizes
